--- a/src/assets/styles/_index.scss
+++ b/src/assets/styles/_index.scss
@@ -18,9 +18,8 @@
 /*
   Components
 */
-@import "./components/footer";
-@import "./components/button";
-@import "./components/link";
+@import "./components/index_components.scss";
+
 
 /*
   Layout
