--- a/src/assets/styles/base/_fonts.scss
+++ b/src/assets/styles/base/_fonts.scss
@@ -29,3 +29,32 @@
 }
 
 $quicksand: "Quicksand", sans-serif;
+
+/*
+  Montserrat
+*/
+
+@font-face {
+  font-family: "Montserrat";
+  font-weight: 700;
+  src: url("@~fonts/Montserrat-Bold.ttf");
+}
+
+@font-face {
+  font-family: "Montserrat";
+  font-weight: 700;
+  src: url("@~fonts/Montserrat-Medium.ttf");
+}
+
+@font-face {
+  font-family: "Montserrat";
+  font-weight: 700;
+  src: url("@~fonts/Montserrat-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Montserrat";
+  font-weight: 700;
+  src: url("@~fonts/Montserrat-Light.ttf");
+}
+$montserrat: "Montserrat", sans-serif;
