--- a/src/assets/styles/common/_general.scss
+++ b/src/assets/styles/common/_general.scss
@@ -9,9 +9,14 @@ body {
   height: 100%;
 }
 body {
-  @include container(1200);
+  @include container(1440);
   font-family: $quicksand;
   // background: $darkslategray;
+}
+.container{
+  width: 100%;
+  max-width: 1120px;
+  margin: 0 auto;
 }
 h1,
 h2,
@@ -23,6 +28,7 @@ h6 {
 }
 a {
   text-decoration: none;
+  display: inline-block;
 }
 p {
   margin: 0;
