--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -14,11 +14,5 @@ block links
 block content
 
   //- Desktop page
-  section.page
-    h1 # Home page
-     
-  .div
-    a(href="blog") Blog page
-
-    ul#list
-      li.list dd
+  section.page 
+    include ./components/header.pug
