--- a/src/views/components/header.pug
+++ b/src/views/components/header.pug
@@ -3,19 +3,19 @@ header.header
         .menu
           ul.menu__list.menu__list_left
             li.menu__item.menu__item_left
-                a.menu__link.menu__link_logo(href="") logo
-            li.menu__item.menu__item_left
-                a.menu__link.menu__link_logo(href="") TOXIN
+                a.menu__link.menu__link_logo(href="") 
+                  img(src="../assets/images/icon/Logo.svg", alt="").header__logo
+                          
           ul.menu__list.menu__list_mid
-            li.menu__item
+            li.menu__item.menu__item_mid
                 a.menu__link(href="") О нас
-            li.menu__item
-                a.menu__link(href="") Услуги          
-            li.menu__item
+            li.menu__item.menu__item_mid
+                a.menu__link(href="") Услуги         
+            li.menu__item.menu__item_mid
                 a.menu__link(href="") Вакансии
-            li.menu__item
+            li.menu__item.menu__item_mid
                 a.menu__link(href="") Новости
-            li.menu__item
+            li.menu__item.menu__item_mid
                 a.menu__link(href="") Соглашения
           ul.menu__list.menu__list_right
             li.menu__item.menu__btn
