--- a/src/views/components/header.pug
+++ b/src/views/components/header.pug
@@ -10,13 +10,15 @@ header.header
             li.menu__item.menu__item_mid
                 a.menu__link(href="") О нас
             li.menu__item.menu__item_mid
-                a.menu__link(href="") Услуги         
+                a.menu__link(href="") Услуги
+                  img(src="../assets/images/icon/expand_more.svg", alt="").menu__link_expand         
             li.menu__item.menu__item_mid
                 a.menu__link(href="") Вакансии
             li.menu__item.menu__item_mid
                 a.menu__link(href="") Новости
             li.menu__item.menu__item_mid
                 a.menu__link(href="") Соглашения
+                  img(src="../assets/images/icon/expand_more.svg", alt="").menu__link_expand
           ul.menu__list.menu__list_right
             li.menu__item.menu__btn
                 a.menu__link.menu__btn_in(href="") Войти
