--- a/src/assets/styles/components/_menu.scss
+++ b/src/assets/styles/components/_menu.scss
@@ -23,8 +23,13 @@
         
     }
     &__link{
-            color: $dark50;
+        color: $dark50;
+        &_expand{
+            margin: 0;
+            padding-left: 5px;
             
+            
+        }
         }
     &__item{
         margin-left: 20px;
