--- a/src/assets/styles/components/_main.scss
+++ b/src/assets/styles/components/_main.scss
@@ -1,9 +1,19 @@
 .main{
     background:no-repeat url(/assets/images/bg/image3.png);
-    
     width: 100%;
     height: 830px;
-    
+    &__text{
+        position: absolute;
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 24px;
+        right: 195px;
+        bottom:-195px;
+        color: rgba(31, 32, 65, 0.75);
+
+    }
 
 
 }
