--- a/src/views/components/main.pug
+++ b/src/views/components/main.pug
@@ -2,4 +2,4 @@ main.main
     .container
       
       include ./selection
-      
+      .main__text Лучшие номера для вашей работы,<br> отдыха и просто вдохновения
