--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -6,7 +6,7 @@ block title
 block basicSeo
   meta(name='description' content='Home Page')
   meta(name='keywords', content='main page, home page')
-  meta(name='author' content='Mario Dev')
+  meta(name='author' content='ilya')
 
 block links
   link(href='')
@@ -18,3 +18,5 @@ block content
     include ./components/header.pug
 
     include ./components/main
+
+    include ./components/footer
