--- a/src/views/templates/_template.pug
+++ b/src/views/templates/_template.pug
@@ -36,7 +36,7 @@ html(lang='ru')
 
     //- Title
     block title
-      title Your project!
+      title HotelProject
 
     //- block manifestBrowserconfigFiles
     //-   link(rel='manifest', href='./manifest.json')
