--- a/src/assets/styles/components/_footer.scss
+++ b/src/assets/styles/components/_footer.scss
@@ -1,1 +1,71 @@
+.footer{
+    
+    width: 100%;
+    height: 372px;
+    &__input{
+        width: 100%;
+        margin-top: 20px;
+    }
+    &__list{
+        
+        @include isFlex($justify: space-between, $wrap:no-wrap,$align:center);
+        
+    }
+    &__logo{
+        padding: 0;
+        margin: 0;
+    }
 
+    &__item{
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        color: rgba(31, 32, 65, 0.75);
+        &_text{
+            line-height: 24px;
+            padding-top: 43px;
+        }
+        &_information{
+            width: 100%;
+            
+        @include isFlex($justify: space-between, $wrap:no-wrap,$align:center);  
+        }   
+        &_header{
+            font-family: 'Times New Roman', Times, serif;
+            font-size: 12px;
+            color: #1F2041;
+            text-transform: uppercase;
+            font-weight: bold;
+        }
+        
+        &_logo{
+            width: 100%;
+            height: 132px;
+            max-width: 260px;
+            padding-top: 40px;
+            margin-right: 35px;
+        }
+       
+        
+    }
+    .information{
+        &__list{
+            padding-top: 100px;
+            &_sub{
+                width: 260px;
+            }
+        }
+        &__link{
+            font-family: Montserrat;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 14px;
+            color: rgba(31, 32, 65, 0.5);
+        }
+        &__item{
+            padding-top: 20px;
+        }
+    }
+
+}
