--- a/src/views/components/footer.pug
+++ b/src/views/components/footer.pug
@@ -9,9 +9,9 @@ footer.footer
         p.footer__item_text.footer__link_text Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»
       li.footer__item.footer__item_information
         ul.information__list.information__list_nav
-          li.information__item.information__item_header 
-            a.information__link(href="") Навигация
-          li.information__item    
+          li.information__item_header.footer__item_header
+            a.footer__item_header(href="") Навигация
+          li.information__item.information__item_link    
             a.information__link(href="") О нас
           li.information__item    
             a.information__link(href="") Новости
@@ -20,8 +20,8 @@ footer.footer
           li.information__item    
             a.information__link(href="") Услуги
         ul.information__list.information__list_about
-          li.information__item.information__item_header 
-            a.information__link(href="") О нас
+          li.information__item_header.footer__item_header 
+            a(href="").footer__item_header О нас
           li.information__item    
             a.information__link(href="") О сервисе
           li.information__item    
@@ -31,8 +31,8 @@ footer.footer
           li.information__item    
             a.information__link(href="") Инвесторы
         ul.information__list.information__list_about
-          li.information__item.information__item_header 
-            a.information__link(href="") СЛУЖБА поддержки
+          li.information__item_header.footer__item_header 
+            a.footer__item_header СЛУЖБА поддержки
           li.information__item    
             a.information__link(href="") Соглашения
           li.information__item    
@@ -41,8 +41,18 @@ footer.footer
             a.information__link(href="") Связь с нами
           li.information__item    
             a.information__link(href="") Инвесторы
-      li.footer__item.footer__item_sub
-        h2.information__item_header  ПОДПИСКА
-        p.footer__item_text.footer__sub_text Получайте специальные предложения и новости сервиса
-        label(for="email") 
-        input(type="email" placeholder="Email").footer__input      
+        ul.information__list.information__list_sub
+          li.information__item_header
+            p.footer__item_header.footer__item_header-sub  ПОДПИСКА
+            p.footer__item_text Получайте специальные предложения и новости сервиса
+            label(for="email") 
+            input(type="email" placeholder="Email").footer__input
+    .footer-under
+      p.footer-under__text Copyright © 2018 Toxin отель. Все права защищены.
+      ul.footer-under__soccial-list
+        li.footer-under__item
+          img(src="", alt="")     
+        li.footer-under__item
+          img(src="", alt="")
+        li.footer-under__item
+          img(src="", alt="")
