--- a/src/views/components/footer.pug
+++ b/src/views/components/footer.pug
@@ -47,12 +47,17 @@ footer.footer
             p.footer__item_text Получайте специальные предложения и новости сервиса
             label(for="email") 
             input(type="email" placeholder="Email").footer__input
+.footer-under__container
+  .container
     .footer-under
       p.footer-under__text Copyright © 2018 Toxin отель. Все права защищены.
       ul.footer-under__soccial-list
         li.footer-under__item
-          img(src="", alt="")     
+          a(href="") 
+            img(src="../assets/images/icon/tw.svg", alt="twiiter").footer-under__item-img    
         li.footer-under__item
-          img(src="", alt="")
+          a(href="")
+            img(src="../assets/images/icon/fb.svg", alt="FB").footer-under__item-img   
         li.footer-under__item
-          img(src="", alt="")
+          a(href="")
+            img(src="../assets/images/icon/inst.svg", alt="INSTGR").footer-under__item-img   
