--- a/src/views/components/footer.pug
+++ b/src/views/components/footer.pug
@@ -43,8 +43,10 @@ footer.footer
             a.information__link(href="") Инвесторы
         ul.information__list.information__list_sub
           li.information__item_header
-            p.footer__item_header.footer__item_header-sub  ПОДПИСКА
+            a.footer__item_header.footer__item_header-sub  ПОДПИСКА
+          li.information__item 
             p.footer__item_text Получайте специальные предложения и новости сервиса
+          li.information__item  
             label(for="email") 
             input(type="email" placeholder="Email").footer__input
 .footer-under__container
