--- a/src/views/components/selection.pug
+++ b/src/views/components/selection.pug
@@ -14,12 +14,12 @@ section.selection
         button.dropdown__toggle(type="button" data-toggle="dropdown") Гости
         ul.dropdown__menu
             li.dropdown__input
-                label
+                label.dropdown__input-label Взрослые
                     input(type='checkbox')
-                |  Взрослые
+                
             li.dropdown__input
-                label
+                label Дети
                     input(type='checkbox')
-                |  Дети 
+                
     .selection__button
      a.selection__link(href="") ПОДОБРАТЬ НОМЕР 
