--- a/src/assets/styles/components/_selection.scss
+++ b/src/assets/styles/components/_selection.scss
@@ -107,6 +107,8 @@
             border: 1px solid rgba(31, 32, 65, 0.5);
             box-sizing: border-box;
             border-radius: 2px;
+            position:absolute;
+            
         }
         &__input{
             font-family: Quicksand;
@@ -116,7 +118,10 @@
             text-transform: uppercase;
             width: 320px;
             height: 44px;
-            display: none;
+            @include isFlex($align: center, $justify: center, $direction: row-reverse, $wrap: wrap);
+            
+           
+            
 
 
         }
