--- a/src/views/components/header.pug
+++ b/src/views/components/header.pug
@@ -9,16 +9,27 @@ header.header
           ul.menu__list.menu__list_mid
             li.menu__item.menu__item_mid
                 a.menu__link(href="") О нас
-            li.menu__item.menu__item_mid
+            li.menu__item.menu__item_mid.dropdown_menu
                 a.menu__link(href="") Услуги
-                  img(src="../assets/images/icon/expand_more.svg", alt="").menu__link_expand         
+                  img(src="../assets/images/icon/expand_more.svg", alt="").menu__link_expand 
+                  ul.menu__list.menu__dropdown.menu__dropdown-mid
+                    li.menu__item.menu__item_dropdown
+                      a.menu__link.menu__link_dropdown(href="") Item 1
+                    li.menu__item.menu__item_dropdown
+                      a.menu__link.menu__link_dropdown(href="") Item 2        
             li.menu__item.menu__item_mid
                 a.menu__link(href="") Вакансии
             li.menu__item.menu__item_mid
                 a.menu__link(href="") Новости
-            li.menu__item.menu__item_mid
+            li.menu__item.menu__item_mid.dropdown_menu
                 a.menu__link(href="") Соглашения
                   img(src="../assets/images/icon/expand_more.svg", alt="").menu__link_expand
+                  ul.menu__list.menu__dropdown
+                     li.menu__item.menu__item_dropdown
+                        a.menu__link.menu__link_dropdown(href="") Item 1
+                     li.menu__item.menu__item_dropdown
+                        a.menu__link.menu__link_dropdown(href="") Item 2
+                  
           ul.menu__list.menu__list_right
             li.menu__item.menu__btn
                 a.menu__link.menu__btn_in(href="") Войти
