Dropdown was add into selection

--- a/src/views/components/selection.pug
+++ b/src/views/components/selection.pug
@@ -15,11 +15,12 @@ section.selection
         ul.dropdown__menu
             li.dropdown__input
                 label.dropdown__input-label Взрослые
-                    input(type='checkbox')
+                 input(type='checkbox')
                 
             li.dropdown__input
-                label Дети
-                    input(type='checkbox')
-                
+                label.dropdown__input-label Дети
+                 input(type='checkbox')
+            li.dropdown__button
+                a.dropdown__subm(type="submit") ПРИМЕНИТЬ   
     .selection__button
      a.selection__link(href="") ПОДОБРАТЬ НОМЕР 
