--- a/src/assets/styles/components/_selection.scss
+++ b/src/assets/styles/components/_selection.scss
@@ -78,6 +78,7 @@
 
     }
     .dropdown{
+        background-color: white;
         margin-top: -20px;
         &__header{
             font-family: Quicksand;
@@ -104,6 +105,8 @@
             background-position: bottom 50% right 10px;
         }
         &__menu{
+            display: none;
+            background-color: white;
             border: 1px solid rgba(31, 32, 65, 0.5);
             box-sizing: border-box;
             border-radius: 2px;
@@ -111,19 +114,56 @@
             
         }
         &__input{
-            font-family: Quicksand;
+            
+            width: 320px;
+            height: 44px;
+            display: flex;
+            text-transform: uppercase;
+            justify-content: space-between;
+            align-items: center;
+            vertical-align: center;
+           &-label{
+            width: 310px;
+            font-family: 'Times New Roman', Times, serif;
             font-style: normal;
             font-weight: bold;
             font-size: 12px;
             text-transform: uppercase;
-            width: 320px;
-            height: 44px;
-            @include isFlex($align: center, $justify: center, $direction: row-reverse, $wrap: wrap);
-            
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding-left: 10px;
+           }
            
+
+
+        }
+        &__button{
+            height: 44px; 
+            display: flex;
+            text-transform: uppercase;
+            justify-content: center;
+            align-items: center;
+            vertical-align: center;
+        }
+        &__subm{
+            display: inline-block;
+            border: none;
+            background-color: none;
+            outline: none;
+            padding: 0px;
+            margin: 0px;
+            font-family: Quicksand;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 12px;
+            line-height: 15px;
+            text-transform: uppercase;
+            color: #BC9CFF;
+            cursor:pointer;
             
-
-
+            
+            
         }
     }
          
